--- a/index.html
+++ b/index.html
@@ -9,35 +9,38 @@
   <title>3-column preview card component</title>
 </head>
 <body>
-  <section class="cards">
-    <div class="card one">
-      <div class="sedan">
-        <img src="./images/icon-sedans.svg" alt="sedan image">
+  <main class="container">
+    <section class="cards">
+      <div class="card one">
+        <div class="sedan">
+          <img src="./images/icon-sedans.svg" alt="sedan image">
+        </div>
+        <h2>SEDANS</h2>
+        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+        or on your next road trip.</p>
+        <a href="#">Learn More</a>
       </div>
-      <h2>SEDANS</h2>
-      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-      or on your next road trip.</p>
-      <a href="#">Learn More</a>
-    </div>
-    <div class="card two">
-      <div class="suv">
-        <img src="./images/icon-suvs.svg" alt="SUV icon">
+      <div class="card two">
+        <div class="suv">
+          <img src="./images/icon-suvs.svg" alt="SUV icon">
+        </div>
+        <h2>SUVS</h2>
+        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+        and off-road adventures.</p>
+        <a href="#">Learn More</a>
       </div>
-      <h2>SUVS</h2>
-      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-      and off-road adventures.</p>
-      <a href="#">Learn More</a>
-    </div>
-    <div class="card three">
-      <div class="luxury">
-        <img src="./images/icon-luxury.svg" alt="luxury car icon">
-      </div>
-      <h2>LUXURY</h2>
-      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-      rental and arrive in style.</p>
-      <a href="#">Learn More</a>
-    </div>  
-  </section>
+      <div class="card three">
+        <div class="luxury">
+          <img src="./images/icon-luxury.svg" alt="luxury car icon">
+        </div>
+        <h2>LUXURY</h2>
+        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+        rental and arrive in style.</p>
+        <a href="#">Learn More</a>
+      </div>  
+    </section>
+  </main>
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Motlalepula Sello</a>.
